tests/sqllogictests/suites/base/issues/issue_13718.test
statement ok
DROP DATABASE IF EXISTS xx

query A
select * from xx.yy;
----
1025: error:
  --> SQL:3:15
  |
1 |
2 |
3 | select * from xx.yy;
  |               ^^ Unknown database `xx` in catalog 'default'